<resources>
    <string name="app_name">Labsheet4</string>
    <string name="title_activity_registration">Registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="notifications_channel_name">push_notifications</string>
    <string name="notifications_channel_description">This is the channel for push notifications</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="tele">Telephone</string>
    <string name="password">Password</string>
    <string name="retype">Re-type Password</string>
    <string name="cancel">CANCEL</string>
</resources>
